tests/macro-tests/cases/property/cannot_declare_lifetime.stderr
error: property functions cannot declare lifetimes
 --> cases/property/cannot_declare_lifetime.rs:4:16
  |
4 | pub fn invalid<'a>(child: impl IntoUiNode, input: &'a str) -> UiNode {
  |                ^^

error: property input can only have `impl OneTrait` types
 --> cases/property/cannot_declare_lifetime.rs:4:51
  |
4 | pub fn invalid<'a>(child: impl IntoUiNode, input: &'a str) -> UiNode {
  |                                                   ^
